# docgram-api

./: .env.example  .gitignore  README.md  makefile  manage.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dependencies.py  log_conf.py  main.py  models.py  schemas.py  utils.py
app/ai/: ai_agents.py  rag.py
app/routers/: __init__.py  auth.py  chat.py  post.py  toggles.py  user.py  utils.py
terraform/: backend.tf  main.tf  outputs.tf  variable.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/.terraform/modules/: modules.json
terraform/assets/glue_job/: extract-job.py  transform-job.py
terraform/modules/api/: api_gateway.tf  iam_policies.tf  lambda.tf  outputs.tf  s3.tf  variables.tf
terraform/modules/etl/: glue.tf  iam_policies.tf  s3.tf  variables.tf
